[package]
name = "yew-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
